--- a/src/Client/Pages/Index.razor
+++ b/src/Client/Pages/Index.razor
@@ -1,9 +1,12 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Memory</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome</h1>
 
-Welcome to your new app. crzh
+<h3> This aint just a game.</h3>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div>
+    here comes the grid
+</div>
+
